--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.7"
+    },
+    "dependencies": {
+        "viewerjs": "^1.11.7"
     }
 }
